--- a/app/src/main/res/layout/fragment_blod.xml
+++ b/app/src/main/res/layout/fragment_blod.xml
@@ -1,14 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:weightSum="10"
+    android:gravity="center"
+    android:background="@color/background_not_whit"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".Blod">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:typeface="monospace"
+            android:labelFor="@id/editTextNameBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/name" />
+        <EditText
+            android:id="@+id/editTextNameBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPersonName"
+            android:importantForAutofill="no" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:typeface="monospace"
+            android:labelFor="@id/editTextAddressBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/address" />
+        <EditText
+            android:inputType="textMultiLine"
+            android:importantForAutofill="no"
+            android:id="@+id/editTextAddressBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:labelFor="@id/editTextPhoneNumberBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/phone_number" />
+        <EditText
+            android:inputType="phone"
+            android:id="@+id/editTextPhoneNumberBlodForm"
+            android:importantForAutofill="no"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:labelFor="@id/editTextNotesBlodForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/notes" />
+        <EditText
+            android:inputType="phone"
+            android:id="@+id/editTextNotesBlodForm"
+            android:importantForAutofill="no"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+    <Spinner
+        android:id="@+id/blodTypes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:entries="@array/Blood_Types"
+        android:popupBackground="@drawable/spinner_shape"
+        android:spinnerMode="dialog" />
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/action_bar_shap"
+        android:gravity="center"
+        android:text="@string/submit"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:typeface="monospace" />
 
-</FrameLayout>
+</LinearLayout>
