--- a/app/src/main/res/layout/fragment_matrial.xml
+++ b/app/src/main/res/layout/fragment_matrial.xml
@@ -1,14 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:weightSum="10"
+    android:background="@color/background_not_whit"
     tools:context=".Matrial">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:typeface="monospace"
+            android:labelFor="@id/editTextNameMatrialForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/name" />
+        <EditText
+            android:id="@+id/editTextNameMatrialForm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPersonName"
+            android:importantForAutofill="no" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:typeface="monospace"
+            android:labelFor="@id/editTextAddressMatrialForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/address" />
+        <EditText
+            android:inputType="textMultiLine"
+            android:importantForAutofill="no"
+            android:id="@+id/editTextAddressMatrialForm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1.3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:labelFor="@id/editTextPhoneNumberMatrialForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/phone_number" />
+        <EditText
+            android:inputType="phone"
+            android:id="@+id/editTextPhoneNumberMatrialForm"
+            android:importantForAutofill="no"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/chooseMatrialTypeSpinner"
+            android:text="@string/choose_material_type" />
+
+        <Spinner
+            android:id="@+id/chooseMatrialTypeSpinner"
+            android:entries="@array/charities"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:spinnerMode="dialog" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:layout_weight="2">
+        <ImageView
+            android:typeface="monospace"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_add_a_photo"
+            android:id="@+id/addImageMatialform1"
+            android:contentDescription="@string/add_image" />
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/action_bar_shap"
+        android:gravity="center"
+        android:text="@string/submit"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:typeface="monospace" />
 
-</FrameLayout>
+</LinearLayout>
