--- a/app/src/main/res/drawable/action_bar_shap.xml
+++ b/app/src/main/res/drawable/action_bar_shap.xml
@@ -7,9 +7,9 @@
     <gradient
         android:angle="315"
         android:type="linear"
-        android:startColor="#471876"
-        android:centerColor="#D7541D8A"
-        android:endColor="@color/greenLight">
+        android:startColor="@color/colorAccent"
+        android:centerColor="@color/colorAccent"
+        android:endColor="@color/colorAccent">
     </gradient>
 
 
