--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -1,41 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:paddingHorizontal="5dp"
+    android:layout_gravity="center"
     android:background="@color/background_not_whit"
+    android:orientation="vertical"
     tools:context=".Time">
-    <LinearLayout
-        android:orientation="vertical"
-        android:visibility="visible"
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:labelFor="@id/charityID"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/cardID"
+        android:layout_marginHorizontal="30dp"
+        app:cardCornerRadius="30dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/enter_your_id"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
-            android:paddingTop="40dp"/>
-        <EditText
-            android:id="@+id/charityID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            tools:ignore="Autofill" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/enter"
-            android:background="@drawable/action_bar_shap"/>
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:visibility="visible">
+
+            <TextView
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:labelFor="@id/charityID"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:text="@string/for_volunteers_only" />
+            <TextView
+                android:gravity="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:id="@+id/charityNameForID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:labelFor="@id/charityID"
+                android:text="@string/enter_your_id" />
+
+            <EditText
+                android:hint="@string/enter_your_id"
+                android:id="@+id/charityID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                tools:ignore="Autofill,LabelFor" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/action_bar_shap"
+                android:text="@string/enter"
+                android:id="@+id/enterIdButton"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="30dp"
+                    android:paddingEnd="10dp"
+                    android:text="@string/don_t_have_an_id"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/get_id_her"
+                    android:textColor="@color/greenDark"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/timeRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 
-</LinearLayout>
+</FrameLayout>
