--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -25,7 +25,7 @@
         android:text="@string/app_name"
         android:gravity="center"
         android:textSize="40sp"
-        android:textColor="@color/greenLight"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
