--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -73,7 +73,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="30dp"
+                    android:paddingStart="20dp"
                     android:paddingEnd="10dp"
                     android:text="@string/don_t_have_an_id"
                     android:textColor="#000" />
@@ -82,8 +82,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/get_id_her"
+                    android:id="@+id/getIDHere"
                     android:textColor="@color/greenDark"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
         </LinearLayout>
 
