--- a/app/src/main/res/layout/activity_search_map.xml
+++ b/app/src/main/res/layout/activity_search_map.xml
@@ -8,23 +8,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SearchMap">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/action_par_Activity_charities"
+        android:id="@+id/action_par_Map"
         android:layout_width="match_parent"
         map:title="Search About Blood"
         map:titleMarginStart="50dp"
         android:layout_height="wrap_content"
         android:background="@drawable/action_bar_shap"
         app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
-        app:titleTextColor="#fff">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.appcompat.widget.Toolbar>
+        app:titleTextColor="#fff"/>
 
     <fragment
         android:layout_marginTop="-10dp"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:ignore="FragmentTagUsage" />
 </LinearLayout>
